--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
   	<meta charset="utf-8">
   	<title>Gina Werfel</title>
   </head>
-  
+
+  <body>
+    <header class="homepage header">
+      <div class="container">
+      	<nav class="homepage navigation">
+      	  <a href="/painting">Painting</a>
+      	  <a href="/paper">Paper</a>
+      	  <a href="/public art">Public Art</a>
+      	  <a href="/archive">Archive</a>
+      	  <a href="/reviews">Reviews</a>
+      	  <a href="/catalogue">Catalogue</a>
+      	  <a href="/about">About</a>
+      	</nav>
+      </div>
+    </header>
+  </body>
+
 </html>
