--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
   <head>
   	<meta charset="utf-8">
-  	<title>Home|Gina Werfel</title>
+  	<title>About|Gina Werfel</title>
   </head>
 
   <body>
