--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 
   <head>
   	<meta charset="utf-8">
-  	<title>Home|Gina Werfel</title>
+  	<title>Reviews|Gina Werfel</title>
   </head>
 
   <body>
