--- a/catalogue.html
+++ b/catalogue.html
@@ -3,14 +3,14 @@
 
   <head>
   	<meta charset="utf-8">
-  	<title>Catalogue|Gina Werfel</title>
+  	<title>Catalogue | Gina Werfel</title>
   </head>
 
   <body>
-    <header class="homepage header">
+    <header class="header">
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
-      	<nav class="homepage navigation">
+      	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Paper</a>
       	  <a href="./public art.html">Public Art</a>
