--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
   <head>
   	<meta charset="utf-8">
-  	<title>Home|Gina Werfel</title>
+  	<title>Home | Gina Werfel</title>
   </head>
 
   <body>
+
+  	<!-- The navigation bar at the top of the screen -->
     <header class="homepage header">
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
@@ -21,6 +23,20 @@
       	</nav>
       </div>
     </header>
+
+    <!-- Content wrapper pads the margins from the header and footer -->
+    <div class="content wrapper">
+      <!-- Slideshow container -->
+      <div class="slideshow">
+        <!-- Slideshow images with -->
+    	<div class="auto slides">
+          <!-- img src="" -->
+    	</div>
+
+
+      </div>
+    </div>
+
   </body>
 
 </html>
