--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
   	<meta charset="utf-8">
+  	<link rel="stylesheet" type="text/css" href="style.css">
   	<title>Home | Gina Werfel</title>
   </head>
 
@@ -29,7 +30,7 @@
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images with -->
-    	<div class="auto slides">
+    	<div class="auto-slides">
           <!-- img src="" -->
     	</div>
 
