--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
+  	<meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Home | Gina Werfel</title>
   </head>
 
@@ -26,17 +27,55 @@
     </header>
 
     <!-- Content wrapper pads the margins from the header and footer -->
-    <div class="content wrapper">
+    <div class="content-wrapper">
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images with -->
     	<div class="auto-slides">
-          <!-- img src="" -->
+          <img src="./images/slide show/Borders.jpg">
+    	</div>
+        
+        <div class="auto-slides">
+          <img src="./images/slide show/Fast Forward.jpg">
     	</div>
 
+    	<div class="auto-slides">
+          <img src="./images/slide show/Gina Cooler-2.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/IMG_9362.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/IMG_9452.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/Island.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/Notation.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/Restraint.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/Roma.jpg">
+    	</div>
+
+    	<div class="auto-slides">
+          <img src="./images/slide show/Skeletal Structure.jpg">
+    	</div>
 
       </div>
     </div>
+
+    <!-- Call the slideshow script -->
+    <script src="slideshow script.js"></script>
 
   </body>
 
