Fixed Slideshow and Nav Bar
Finally figured out how to format the slide show images and change the nav bar colors on hover and when active. Did some formatting.

--- a/archive.html
+++ b/archive.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Archive | Gina Werfel</title>
   </head>
 
@@ -15,7 +16,7 @@
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Paper</a>
       	  <a href="./public art.html">Public Art</a>
-      	  <a href="./archive.html">Archive</a>
+      	  <a href="./archive.html" class="active">Archive</a>
       	  <a href="./reviews.html">Reviews</a>
       	  <a href="./catalogue.html">Catalogue</a>
       	  <a href="./about.html">About</a>
