--- a/catalogue.html
+++ b/catalogue.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Catalogue | Gina Werfel</title>
   </head>
 
@@ -17,7 +18,7 @@
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Reviews</a>
-      	  <a href="./catalogue.html">Catalogue</a>
+      	  <a href="./catalogue.html" class="active">Catalogue</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
