--- a/index.html
+++ b/index.html
@@ -30,47 +30,17 @@
     <div class="content-wrapper">
       <!-- Slideshow container -->
       <div class="slideshow">
-        <!-- Slideshow images with -->
-    	<div class="auto-slides">
-          <img src="./images/slide show/Borders.jpg">
-    	</div>
-        
-        <div class="auto-slides">
-          <img src="./images/slide show/Fast Forward.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Gina Cooler-2.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/IMG_9362.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/IMG_9452.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Island.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Notation.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Restraint.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Roma.jpg">
-    	</div>
-
-    	<div class="auto-slides">
-          <img src="./images/slide show/Skeletal Structure.jpg">
-    	</div>
-
+        <!-- Slideshow images -->
+          <img class="auto-slides" src="./images/slide show/Borders.jpg">
+          <img class="auto-slides" src="./images/slide show/Fast Forward.jpg">
+          <img class="auto-slides" src="./images/slide show/Gina Cooler-2.jpg">
+          <img class="auto-slides" src="./images/slide show/IMG_9362.jpg">
+          <img class="auto-slides" src="./images/slide show/IMG_9452.jpg">
+          <img class="auto-slides" src="./images/slide show/Island.jpg">
+          <img class="auto-slides" src="./images/slide show/Notation.jpg">
+          <img class="auto-slides" src="./images/slide show/Restraint.jpg">
+          <img class="auto-slides" src="./images/slide show/Roma.jpg">
+          <img class="auto-slides" src="./images/slide show/Skeletal Structure.jpg">
       </div>
     </div>
 
