--- a/painting.html
+++ b/painting.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
+  	<meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Painting | Gina Werfel</title>
   </head>
 
@@ -12,7 +13,7 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="navigation">
-      	  <a href="./painting.html">Painting</a>
+      	  <a href="./painting.html" class="active">Painting</a>
       	  <a href="./paper.html">Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
