--- a/paper.html
+++ b/paper.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Paper | Gina Werfel</title>
   </head>
 
@@ -13,7 +14,7 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Paper</a>
+      	  <a href="./paper.html" class="active">Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Reviews</a>
