--- a/public art.html
+++ b/public art.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=divice-width, initial-scale=1">
   	<title>Public Art | Gina Werfel</title>
   </head>
 
@@ -14,7 +15,7 @@
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Paper</a>
-      	  <a href="./public art.html">Public Art</a>
+      	  <a href="./public art.html" class="active">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Reviews</a>
       	  <a href="./catalogue.html">Catalogue</a>
