--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Reviews</a>
       	  <a href="./catalogue.html">Catalogue</a>
-      	  <a href="./about.html">About</a>
+      	  <a href="./about.html" class="active">About</a>
       	</nav>
       </div>
     </header>
