--- a/index.html
+++ b/index.html
@@ -31,21 +31,27 @@
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images -->
-          <img class="auto-slides" src="./images/slide show/Borders.jpg">
-          <img class="auto-slides" src="./images/slide show/Fast Forward.jpg">
-          <img class="auto-slides" src="./images/slide show/Gina Cooler-2.jpg">
-          <img class="auto-slides" src="./images/slide show/IMG_9362.jpg">
-          <img class="auto-slides" src="./images/slide show/IMG_9452.jpg">
-          <img class="auto-slides" src="./images/slide show/Island.jpg">
-          <img class="auto-slides" src="./images/slide show/Notation.jpg">
-          <img class="auto-slides" src="./images/slide show/Restraint.jpg">
-          <img class="auto-slides" src="./images/slide show/Roma.jpg">
-          <img class="auto-slides" src="./images/slide show/Skeletal Structure.jpg">
+        <img class="slide-img" src="./images/slide show/Borders.jpg">
+        <img class="slide-img" src="./images/slide show/Fast Forward.jpg">
+        <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg">
+        <img class="slide-img" src="./images/slide show/IMG_9362.jpg">
+        <img class="slide-img" src="./images/slide show/IMG_9452.jpg">
+        <img class="slide-img" src="./images/slide show/Island.jpg">
+        <img class="slide-img" src="./images/slide show/Notation.jpg">
+        <img class="slide-img" src="./images/slide show/Restraint.jpg">
+        <img class="slide-img" src="./images/slide show/Roma.jpg">
+        <img class="slide-img" src="./images/slide show/Skeletal Structure.jpg">
       </div>
     </div>
-
     <!-- Call the slideshow script -->
     <script src="slideshow script.js"></script>
+
+    <!-- Page footer for copyright and social media info -->
+    <footer class="footer">
+      <div class="footer-left">
+        <p>&copy Gina Werfel</p>
+      </div>
+    </footer>
 
   </body>
 
