--- a/catalogue.html
+++ b/catalogue.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+
     <header class="header">
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
@@ -23,6 +24,17 @@
       	</nav>
       </div>
     </header>
+
+
+
+
+    <!-- Page footer for copyright and social media info -->
+    <footer class="footer">
+      <div class="footer-left">
+        <p>&copy Gina Werfel</p>
+      </div>
+    </footer>
+    
   </body>
 
 </html>
