--- a/painting.html
+++ b/painting.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+
     <header class="header">
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
@@ -23,6 +24,51 @@
       	</nav>
       </div>
     </header>
+
+    <!-- Content wrapper pads the margins from the header and footer -->
+    <div class="content-wrapper">
+      <!-- Gallery container -->
+      <div class="gallery">
+        <!-- Gallery container for images and side buttones -->
+        <div class="gallery-main">
+          <!-- Gallery container for the main buttons -->
+          <div class="gallery-buttons">
+
+          </div>
+      	  <!-- Gallery container for just the main images -->
+      	  <div class="gallery-images">
+            <!-- Gallery images -->
+            <img class="gallery-img" src="./images/current work/Galaxy.jpg">
+            <img class="gallery-img" src="./images/current work/Gina Cooler-2.jpg">
+            <img class="gallery-img" src="./images/current work/Gina Cooler-11.jpg">
+            <img class="gallery-img" src="./images/current work/Gina Cooler-16.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9349.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9362.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9364.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9369.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9383.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9387.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9405.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9416.jpg">
+            <img class="gallery-img" src="./images/current work/IMG_9452.jpg">
+            <img class="gallery-img" src="./images/current work/Borders.jpg">
+          </div>
+        </div>
+        <!-- Gallery container for the bottom navigation -->
+        <div class="gallery-nav">
+          
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Page footer for copyright and social media info -->
+    <footer class="footer">
+      <div class="footer-left">
+        <p>&copy Gina Werfel</p>
+      </div>
+    </footer>
+
   </body>
 
 </html>
