--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   	<title>About | Gina Werfel</title>
   </head>
 
@@ -33,7 +34,7 @@
         <p>&copy Gina Werfel</p>
       </div>
     </footer>
-    
+
   </body>
 
 </html>
