--- a/painting.html
+++ b/painting.html
@@ -4,7 +4,7 @@
   <head>
   	<meta charset="utf-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
-  	<meta name="viewport" content="width=divice-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   	<title>Painting | Gina Werfel</title>
   </head>
 
@@ -29,26 +29,23 @@
     <div class="content-wrapper">
       <!-- Gallery container -->
       <div class="gallery">
-        <!-- Gallery container for images and side buttones -->
+        <!-- Gallery container for images -->
         <div class="gallery-main">
-      	  <!-- Gallery container for just the main images -->
-      	  <div class="gallery-images">
-            <!-- Gallery images -->
-            <img class="gallery-img" src="./images/current work/Galaxy.jpg">
-            <img class="gallery-img" src="./images/current work/Gina Cooler-2.jpg">
-            <img class="gallery-img" src="./images/current work/Gina Cooler-11.jpg">
-            <img class="gallery-img" src="./images/current work/Gina Cooler-16.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9349.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9362.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9364.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9369.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9383.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9387.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9405.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9416.jpg">
-            <img class="gallery-img" src="./images/current work/IMG_9452.jpg">
-            <img class="gallery-img" src="./images/current work/Borders.jpg">
-          </div>
+          <!-- Gallery images -->
+          <img class="gallery-img" src="./images/current work/Galaxy.jpg">
+          <img class="gallery-img" src="./images/current work/Gina Cooler-2.jpg">
+          <img class="gallery-img" src="./images/current work/Gina Cooler-11.jpg">
+          <img class="gallery-img" src="./images/current work/Gina Cooler-16.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9349.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9362.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9364.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9369.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9383.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9387.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9405.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9416.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_9452.jpg">
+          <img class="gallery-img" src="./images/current work/Borders.jpg">
         </div>
         <!-- Gallery container for the main buttons that go to the next image -->
         <div class="gallery-buttons">
@@ -59,10 +56,23 @@
         <!-- Click an image to jump to it, use overflow to scroll through them -->
         <div class="gallery-nav">
           <!--div class="gallery-buttons">
-            <button class="prev-button" onclick="plusNavImg(-1)">❮</button>
-            <button class="next-button" onclick="plusNavImg(1)">❯</button>
+            
           </div-->
-          <!-- image buttons here -->
+          <!-- Gallery navigation icon buttons -->
+          <img class="gallery-icon" onclick="currentImg(1)" src="./images/current work/Galaxy.jpg">
+          <img class="gallery-icon" onclick="currentImg(2)" src="./images/current work/Gina Cooler-2.jpg">
+          <img class="gallery-icon" onclick="currentImg(3)" src="./images/current work/Gina Cooler-11.jpg">
+          <img class="gallery-icon" onclick="currentImg(4)" src="./images/current work/Gina Cooler-16.jpg">
+          <img class="gallery-icon" onclick="currentImg(5)" src="./images/current work/IMG_9349.jpg">
+          <img class="gallery-icon" onclick="currentImg(6)" src="./images/current work/IMG_9362.jpg">
+          <img class="gallery-icon" onclick="currentImg(7)" src="./images/current work/IMG_9364.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" src="./images/current work/IMG_9369.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" src="./images/current work/IMG_9383.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" src="./images/current work/IMG_9387.jpg">
+          <img class="gallery-icon" onclick="currentImg(11)" src="./images/current work/IMG_9405.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" src="./images/current work/IMG_9416.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/current work/IMG_9452.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/current work/Borders.jpg">
         </div>
       </div>
     </div>
