--- a/public art.html
+++ b/public art.html
@@ -4,7 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=divice-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   	<title>Public Art | Gina Werfel</title>
   </head>
 
