Feedback and Public Art
Added the gallery for public art. The photos are longer horizontal, so I added a public art class to make the gallery more suited for them. Messed around with color and spacing, and combined the catalogue and review pages into "Press and Reviews".

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div class="container">
       	<nav class="homepage navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Paper</a>
+      	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Reviews</a>
-      	  <a href="./catalogue.html">Catalogue</a>
+      	  <a href="./reviews.html">Press and Reviews</a>
+      	  <!--a href="./catalogue.html">Catalogue</a-->
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
