--- a/paper.html
+++ b/paper.html
@@ -15,11 +15,11 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html" class="active">Paper</a>
+      	  <a href="./paper.html" class="active">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Reviews</a>
-      	  <a href="./catalogue.html">Catalogue</a>
+      	  <a href="./reviews.html">Press and Reviews</a>
+      	  <!--a href="./catalogue.html">Catalogue</a-->
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
@@ -75,7 +75,6 @@
 
     <!-- Call the gallery script -->
     <script src="gallery script.js"></script>
-
 
     <!-- Page footer for copyright and social media info -->
     <footer class="footer">
