Archive and Extras
Added the CSS to the archive tabs and grid. Added all the archive images and made them look nice. Renamed the Catalogue tag to News. Added the experiemental background to the home page. Tried making a modal for the archive images, but it was only for a singular image, not a gallery. I'll make it work for a gallery next time.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <body>
 
+    <!-- Background image wrapping around everything else -->
+  	<div class="background">
+
   	<!-- The navigation bar at the top of the screen -->
     <header class="homepage header">
       <a class="title" href="./index.html">Gina Werfel</a>
@@ -20,7 +23,7 @@
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Press and Reviews</a>
-      	  <!--a href="./catalogue.html">Catalogue</a-->
+      	  <a href="./news.html">News</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
@@ -52,6 +55,8 @@
         <p>&copy Gina Werfel</p>
       </div>
     </footer>
+
+</div>
 
   </body>
 
