--- a/public art.html
+++ b/public art.html
@@ -19,7 +19,7 @@
       	  <a href="./public art.html" class="active">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <a href="./reviews.html">Press and Reviews</a>
-      	  <!--a href="./catalogue.html">Catalogue</a-->
+      	  <a href="./news.html">News</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
