--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <!-- Background image wrapping around everything else -->
-  	<div class="background">
+  	<!--div class="background"-->
 
   	<!-- The navigation bar at the top of the screen -->
     <header class="homepage header">
@@ -22,8 +22,8 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Press and Reviews</a>
-      	  <a href="./news.html">News</a>
+      	  <a href="./reviews.html">Publications</a>
+      	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
@@ -34,6 +34,7 @@
       <!-- Slideshow container -->
       <div class="slideshow">
         <!-- Slideshow images -->
+        <img class="slide-img" src="./images/slide show/IMG_0317.jpg">
         <img class="slide-img" src="./images/slide show/Borders.jpg">
         <img class="slide-img" src="./images/slide show/Fast Forward.jpg">
         <img class="slide-img" src="./images/slide show/Gina Cooler-2.jpg">
@@ -56,7 +57,7 @@
       </div>
     </footer>
 
-</div>
+<!--/div-->
 
   </body>
 
