--- a/news.html
+++ b/news.html
@@ -15,10 +15,10 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Paper</a>
+      	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Reviews</a>
+      	  <a href="./reviews.html">Press</a>
       	  <a href="./news.html" class="active">News</a>
       	  <a href="./about.html">About</a>
       	</nav>
