--- a/public art.html
+++ b/public art.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html" class="active">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Press and Reviews</a>
+      	  <a href="./reviews.html">Press</a>
       	  <a href="./news.html">News</a>
       	  <a href="./about.html">About</a>
       	</nav>
