--- a/reviews.html
+++ b/reviews.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html" class="active">Press and Reviews</a>
+      	  <a href="./reviews.html" class="active">Press</a>
       	  <a href="./news.html">News</a>
       	  <a href="./about.html">About</a>
       	</nav>
