--- a/archive.html
+++ b/archive.html
@@ -18,8 +18,8 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html" class="active">Archive</a>
-      	  <a href="./reviews.html">Press</a>
-      	  <a href="./news.html">News</a>
+          <a href="./reviews.html">Publications</a>
+      	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
