--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Press</a>
-      	  <a href="./news.html" class="active">News</a>
+      	  <a href="./reviews.html">Publications</a>
+      	  <a href="./news.html" class="active">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
