--- a/painting.html
+++ b/painting.html
@@ -18,8 +18,8 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Press</a>
-      	  <a href="./news.html">News</a>
+      	  <a href="./reviews.html">Publications</a>
+      	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
@@ -32,9 +32,12 @@
         <!-- Gallery container for images -->
         <div class="gallery-main">
           <!-- Gallery images -->
+          <img class="gallery-img" src="./images/current work/IMG_3856.jpg">
           <img class="gallery-img" src="./images/current work/Galaxy.jpg">
           <img class="gallery-img" src="./images/current work/Gina Cooler-2.jpg">
           <img class="gallery-img" src="./images/current work/Gina Cooler-11.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_3927.jpg">
+          <img class="gallery-img" src="./images/current work/IMG_3916.jpg">
           <img class="gallery-img" src="./images/current work/IMG_9349.jpg">
           <img class="gallery-img" src="./images/current work/IMG_9362.jpg">
           <img class="gallery-img" src="./images/current work/IMG_9369.jpg">
@@ -54,17 +57,20 @@
             <a class="next-button" onclick="plusImg(1)">❯</a>
           </div>
           <!-- Gallery navigation icon buttons -->
-          <img class="gallery-icon" onclick="currentImg(1)" src="./images/current work/icons/Galaxy icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(2)" src="./images/current work/icons/Gina Cooler-2 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(3)" src="./images/current work/icons/Gina Cooler-11 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(4)" src="./images/current work/icons/IMG_9349 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(5)" src="./images/current work/icons/IMG_9362 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(7)" src="./images/current work/icons/IMG_9369 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" src="./images/current work/icons/IMG_9383 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" src="./images/current work/icons/IMG_9387 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" src="./images/current work/icons/IMG_9405 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(11)" src="./images/current work/icons/Gina Cooler-16 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(12)" src="./images/current work/icons/Borders icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(1)" src="./images/current work/icons/IMG_3856 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(2)" src="./images/current work/icons/Galaxy icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(3)" src="./images/current work/icons/Gina Cooler-2 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(4)" src="./images/current work/icons/Gina Cooler-11 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(5)" src="./images/current work/icons/IMG_3927 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(6)" src="./images/current work/icons/IMG_3916 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(7)" src="./images/current work/icons/IMG_9349 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" src="./images/current work/icons/IMG_9362 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" src="./images/current work/icons/IMG_9369 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" src="./images/current work/icons/IMG_9383 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(11)" src="./images/current work/icons/IMG_9387 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" src="./images/current work/icons/IMG_9405 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/current work/icons/Gina Cooler-16 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/current work/icons/Borders icon.jpg">
         </div>
       </div>
     </div>
