--- a/paper.html
+++ b/paper.html
@@ -18,8 +18,8 @@
       	  <a href="./paper.html" class="active">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Press</a>
-      	  <a href="./news.html">News</a>
+          <a href="./reviews.html">Publications</a>
+      	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
@@ -35,13 +35,16 @@
           <img class="gallery-img" src="./images/works on paper/Cadence.jpg">
           <img class="gallery-img" src="./images/works on paper/GW17 Stencil 30x22.jpg">
           <img class="gallery-img" src="./images/works on paper/GW18 Opposition 30x22.jpg">
+          <img class="gallery-img" src="./images/works on paper/IMG_3947.jpg"> <!--new-->
+          <img class="gallery-img" src="./images/works on paper/IMG_3950.jpg"> <!--new-->
+          <img class="gallery-img" src="./images/works on paper/IMG_3963.jpg"> <!--new-->
+          <img class="gallery-img" src="./images/works on paper/IMG_7830.jpg"> <!--new-->
           <img class="gallery-img" src="./images/works on paper/Notation.jpg">
           <img class="gallery-img" src="./images/works on paper/Pink Haze.jpg">
           <img class="gallery-img" src="./images/works on paper/Roma.jpg">
           <img class="gallery-img" src="./images/works on paper/Twisted.jpg">
           <img class="gallery-img" src="./images/works on paper/Year of the Ram.jpg">
           <img class="gallery-img" src="./images/works on paper/IMG_9416.jpg">
-          <img class="gallery-img" src="./images/works on paper/IMG_9452.jpg">
           <img class="gallery-img" src="./images/works on paper/Skeletal Structure.jpg">
         </div>
         
@@ -54,17 +57,34 @@
             <a class="next-button" onclick="plusImg(1)">❯</a>
           </div>
           <!-- Gallery navigation icon buttons -->
-          <img class="gallery-icon" onclick="currentImg(1)" src="./images/works on paper/icons/Cadence icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(3)" src="./images/works on paper/icons/GW17 Stencil 30x22 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(4)" src="./images/works on paper/icons/GW18 Opposition 30x22 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(5)" src="./images/works on paper/icons/Notation icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(6)" src="./images/works on paper/icons/Pink Haze icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(7)" src="./images/works on paper/icons/Roma icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" src="./images/works on paper/icons/Twisted icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" src="./images/works on paper/icons/Year of the Ram icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" src="./images/current work/icons/IMG_9416 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(11)" src="./images/current work/icons/IMG_9452 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(12)" src="./images/works on paper/icons/Skeletal Structure icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(1)" 
+            src="./images/works on paper/icons/Cadence icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(2)" 
+            src="./images/works on paper/icons/GW17 Stencil 30x22 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(3)" 
+            src="./images/works on paper/icons/GW18 Opposition 30x22 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(4)" 
+            src="./images/works on paper/icons/IMG_3947 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(5)" 
+            src="./images/works on paper/icons/IMG_3950 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(6)" 
+            src="./images/works on paper/icons/IMG_3963 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(7)" 
+            src="./images/works on paper/icons/IMG_7830 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" 
+            src="./images/works on paper/icons/Notation icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" 
+            src="./images/works on paper/icons/Pink Haze icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" 
+            src="./images/works on paper/icons/Roma icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(11)" 
+            src="./images/works on paper/icons/Twisted icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" 
+            src="./images/works on paper/icons/Year of the Ram icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" 
+            src="./images/works on paper/icons/IMG_9416 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" 
+            src="./images/works on paper/icons/Skeletal Structure icon.jpg">
         </div>
       </div>
     </div>
