--- a/public art.html
+++ b/public art.html
@@ -29,6 +29,9 @@
     <div class="content-wrapper">
       <!-- Gallery container -->
       <div class="gallery">
+        <!-- Gallery navigation by clicking to the right or left of images -->
+        <a class="prev-img public-art-button" onclick="plusImg(-1)"></a>
+        <a class="next-img public-art-button" onclick="plusImg(1)"></a>
         <!-- Gallery container for images -->
         <div class="gallery-main public-art">
           <!-- Gallery images -->
