--- a/reviews.html
+++ b/reviews.html
@@ -25,7 +25,18 @@
       </div>
     </header>
 
-
+    <!-- Publications wrapper pads the margins from the header and footer -->
+    <div class="publications-wrapper">
+      <h2>Exhibitions</h2>
+      <h3>Solo</h3>
+      <p><b>2018 &nbsp;&nbsp;&nbsp;&nbsp;Korn Gallery,</b> <i>Interface</i>, Drew University, Madison, NJ; catalog essay by Jennifer Samet; <a href="https://indd.adobe.com/view/61c12cfd-76d7-418d-bb23-
+      434620fda71a">link</a></p>
+      <p><b>2017 &nbsp;&nbsp;&nbsp;&nbsp;Coombs Gallery,</b> <i>Recollections</i>, American University in Paris, Paris,
+      France<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Prince Street Gallery,</b> <i>East/West</i>, New York, NY<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Elizabeth Moss Gallery,</b> <i>Geographies</i>, Falmouth, ME</p>
+      <p><b>2016 &nbsp;&nbsp;&nbsp;&nbsp;Mondavi Winery,</b> <i>Clearing</i>, Margrit Mondavi Gallery, Napa, CA
+    </div>
 
 
     <!-- Page footer for copyright and social media info -->
