--- a/news.html
+++ b/news.html
@@ -18,14 +18,14 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Publications</a>
+      	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html" class="active">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
       </div>
     </header>
 
-
+    <!-- Subcategories: catalogues, interviews, reviews-->
 
 
     <!-- Page footer for copyright and social media info -->
