--- a/paper.html
+++ b/paper.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html" class="active">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-          <a href="./reviews.html">Publications</a>
+          <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
@@ -38,10 +38,10 @@
           <img class="gallery-img" src="./images/works on paper/Cadence.jpg">
           <img class="gallery-img" src="./images/works on paper/GW17 Stencil 30x22.jpg">
           <img class="gallery-img" src="./images/works on paper/GW18 Opposition 30x22.jpg">
-          <img class="gallery-img" src="./images/works on paper/IMG_3947.jpg"> <!--new-->
-          <img class="gallery-img" src="./images/works on paper/IMG_3950.jpg"> <!--new-->
-          <img class="gallery-img" src="./images/works on paper/IMG_3963.jpg"> <!--new-->
-          <img class="gallery-img" src="./images/works on paper/IMG_7830.jpg"> <!--new-->
+          <img class="gallery-img" src="./images/works on paper/IMG_3947.jpg">
+          <img class="gallery-img" src="./images/works on paper/IMG_3950.jpg">
+          <img class="gallery-img" src="./images/works on paper/IMG_3963.jpg">
+          <img class="gallery-img" src="./images/works on paper/IMG_7830.jpg">
           <img class="gallery-img" src="./images/works on paper/Notation.jpg">
           <img class="gallery-img" src="./images/works on paper/Pink Haze.jpg">
           <img class="gallery-img" src="./images/works on paper/Roma.jpg">
@@ -49,6 +49,8 @@
           <img class="gallery-img" src="./images/works on paper/Year of the Ram.jpg">
           <img class="gallery-img" src="./images/works on paper/IMG_9416.jpg">
           <img class="gallery-img" src="./images/works on paper/Skeletal Structure.jpg">
+          <img class="gallery-img" src="./images/works on paper/Offbeat.jpg">
+          <img class="gallery-img" src="./images/works on paper/Polyphony.jpg">
         </div>
         
         <!-- Gallery container for the bottom navigation-->
@@ -88,6 +90,10 @@
             src="./images/works on paper/icons/IMG_9416 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(14)" 
             src="./images/works on paper/icons/Skeletal Structure icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(15)" 
+            src="./images/works on paper/icons/Offbeat icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(16)" 
+            src="./images/works on paper/icons/Polyphony icon.jpg">
         </div>
       </div>
     </div>
