--- a/reviews.html
+++ b/reviews.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-          <a href="./reviews.html" class="active">Publications</a>
+          <!--a href="./reviews.html" class="active">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
@@ -30,7 +30,7 @@
       <h2>Exhibitions</h2>
       <h3>Solo</h3>
       <p><b>2018 &nbsp;&nbsp;&nbsp;&nbsp;Korn Gallery,</b> <i>Interface</i>, Drew University, Madison, NJ; catalog essay by Jennifer Samet; <a href="https://indd.adobe.com/view/61c12cfd-76d7-418d-bb23-
-      434620fda71a">link</a></p>
+      434620fda71a" target="_blank">link</a></p>
       <p><b>2017 &nbsp;&nbsp;&nbsp;&nbsp;Coombs Gallery,</b> <i>Recollections</i>, American University in Paris, Paris,
       France<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Prince Street Gallery,</b> <i>East/West</i>, New York, NY<br>
