--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Publications</a>
+      	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html" class="active">About</a>
       	</nav>
@@ -32,23 +32,24 @@
 
         <img class="about-img" src="./images/Gina in Studio.jpg">
 
+        <h2><a id="cv" href="./GW_cv.pdf" target="_blank">Curriculum Vitae</a></h2><br>
         <h2>Contact</h2>
         <p>For inquiries regarding the work of Gina Werfel:</p><br>
         <h3>Gina Werfel</h3>
         <p>gswerfel@ucdavis.edu</p><br>
-        <h3>Price Street Gallery</h3>
-        <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
+        <h3>Prince Street Gallery</h3>
+        <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/" target="_blank">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
         530 West 25th Street 4th Floor<br>
         New York, NY 10001<br>
         (646)230-0246</p><br>
         <h3>IdeelArt</h3>
-        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p><br>
+        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p><br>
         <h3>Adler&Co Gallery</h3>
-        <p><a href="http://www.adlerandco.com/werfel/index.html">http://www.adlerandco.com/werfel/index.html</a></p>
+        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank">http://www.adlerandco.com/werfel/index.html</a></p>
 
         <br>
 
-        <h2>Artist Statment</h2>
+        <h2>Artist Statement</h2>
         <p>Like polyphony in music, Werfel’s work consists of textures of multiple independent voices. In her recent paintings, she employs a wide vocabulary of marks which slyly reference the influence of Photoshop on contemporary visual culture. A shallow space, in which a combination of clearly defined graphical lines and stencils sit on the surface, contrasts with a more ambiguous environment made up of naturalistic gestures that fade in and out of focus like a distant memory. In her process-driven series of mono-prints the removal of the hand suggests this dichotomy even more strongly.</p>
         <p>Recent travels abroad have influenced Werfel’s work. Inspired by a stay in Singapore in 2015 where she taught at Yale-NUS College, Werfel began to layer stencils over her gestural brush marks. In 2016 while a visiting artist at the American Academy in Rome, she renewed her interest in Baroque ceiling paintings and incorporated their spatial complexity into her compositions.</p>
         <p>Trained at Columbia University, the New York Studio School and Hamilton College, Werfel has been featured in numerous exhibitions. Recent solo exhibitions include the Coombs Gallery at American University of Paris, Prince Street Gallery in NYC, and the Mondavi Winery in Napa, CA. She has been awarded residencies at the American Academy in Rome, the Rockefeller Foundation’s Bellagio Center in Italy, the Djerassi Foundation in California, the Virginia Center for the Creative Arts, and Yosemite National Park. In 2017, she completed a public art commission Thicket for Burnett Miller Park in McKinley Village in Sacramento.</p>
