--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Publications</a>
+      	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
