--- a/painting.html
+++ b/painting.html
@@ -18,7 +18,7 @@
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
-      	  <a href="./reviews.html">Publications</a>
+      	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
       	</nav>
@@ -47,6 +47,8 @@
           <img class="gallery-img" src="./images/current work/IMG_9383.jpg">
           <img class="gallery-img" src="./images/current work/IMG_9405.jpg">
           <img class="gallery-img" src="./images/current work/Borders.jpg">
+          <img class="gallery-img" src="./images/current work/Constellation.jpg"><!--"Singapore", 60"x48", 2017-->
+          <img class="gallery-img" src="./images/current work/Tumble 60x48 2017.jpg"><!--"Tumble", 60"x48", oil on canvas, 2017-->
         </div>
 
         <!-- Gallery container for the bottom navigation-->
@@ -70,6 +72,8 @@
           <img class="gallery-icon" onclick="currentImg(10)" src="./images/current work/icons/IMG_9383 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(11)" src="./images/current work/icons/IMG_9405 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(12)" src="./images/current work/icons/Borders icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/current work/icons/Constellation icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/current work/icons/Tumble 60x48 2017 icon.jpg">
         </div>
       </div>
     </div>
