--- a/public art.html
+++ b/public art.html
@@ -37,13 +37,13 @@
       <!-- Gallery container -->
       <div class="gallery">
         <!-- Gallery navigation by clicking to the right or left of images -->
-        <a class="prev-img public-art-button" onclick="plusImg(-1)"></a>
-        <a class="next-img public-art-button" onclick="plusImg(1)"></a>
+        <a class="prev-img" onclick="plusImg(-1)"></a>
+        <a class="next-img" onclick="plusImg(1)"></a>
         <!-- Gallery container for images -->
-        <div class="gallery-main public-art">
+        <div class="gallery-main">
           <!-- Gallery images -->
           <img class="gallery-img" src="./images/public art/JCP_0746-X3.jpg">
-          <img class="gallery-img tall" src="./images/public art/JCP_0768-X3.jpg">
+          <img class="gallery-img" src="./images/public art/JCP_0768-X3.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0782-X3.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0787-X3.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0806-X3.jpg">
@@ -51,9 +51,9 @@
           <img class="gallery-img" src="./images/public art/JCP_0829-X3.jpg">
           <img class="gallery-img" src="./images/public art/11_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0841-X3.jpg">
-          <img class="gallery-img tall" src="./images/public art/7_o.jpg">
+          <img class="gallery-img" src="./images/public art/7_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0845-X3.jpg">
-          <img class="gallery-img tall" src="./images/public art/3_o.jpg">
+          <img class="gallery-img" src="./images/public art/3_o.jpg">
           <img class="gallery-img" src="./images/public art/JCP_0952-X3.jpg">
         </div>
         
