--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="homepage navigation">
-      	  <a href="./painting.html">Painting</a>
+      	  <a href="./painting.php">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
